--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="hello_world">Hello Square World!</string>
     <string name="title_activity_landing">Landing</string>
     <string name="title_activity_steps_u_i">StepsUI</string>
+    <string name="title_activity_steps_graph">StepsGraph</string>
 </resources>
