graph does not work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,10 @@
     <string name="title_activity_profile">Profile</string>
     <string name="title_activity_steps_u_i">StepsUI</string>
     <string name="title_activity_steps_graph">StepsGraph</string>
+
+    <string-array name="text">
+    <item> Welcome To The NextFit Family </item>
+    <item> Start Being Healthy And Awesome </item>
+    </string-array>
+
 </resources>
